# hearth

./: .gitignore  CLAUDE.md  INSTALL_GUIDE.md  LICENSE  README.md  hearth_roadmap.md  hearth_roadmap_v0.4.md  pyproject.toml
scripts/: benchmark_models.py
src/hearth/: cli.py  config.py  context.py  db.py  embeddings.py  resonance_guide.py  resonance_schema.sql  schema.sql  search.py  server.py  threads_schema.sql  transcribe.py
src/hearth/web/: __init__.py  app.py  dependencies.py
src/hearth/web/routes/: __init__.py  dashboard.py  drift.py  lifecycle.py  memories.py  projects.py  sessions.py  threads.py
src/hearth/web/static/: app.js  style.css
src/hearth/web/templates/: base.html  dashboard.html
src/hearth/web/templates/drift/: view.html
src/hearth/web/templates/lifecycle/: _queue.html  review.html
src/hearth/web/templates/memories/: _detail.html  _edit_form.html  _table.html  list.html
src/hearth/web/templates/projects/: _detail.html  _table.html  list.html
src/hearth/web/templates/search/: _results.html
src/hearth/web/templates/sessions/: _detail.html  list.html
src/hearth/web/templates/threads/: _card.html  _detail.html  _list.html  list.html
tests/: conftest.py  test_context.py  test_db.py  test_embeddings.py  test_lifecycle.py  test_resonance.py  test_search.py  test_server.py  test_tensions.py  test_threads.py  test_transcribe.py  test_web.py
